Fix team page divider and text alignment  issues

--- a/assets/styles/team-styles.css
+++ b/assets/styles/team-styles.css
@@ -46,10 +46,22 @@
 }
 
 div.column {
-    display: inline-block;
-    overflow-x: initial;
-    vertical-align: middle;
-    width: 50%;
-    padding-bottom: 15px;
+    display: inline-block !important;
+    overflow-x: initial !important;
+    vertical-align: middle !important;
+    width: 50% !important;
+    padding-bottom: 15px !important;
 }
 
+.divider {
+  position: relative;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.divider::before {
+  content: '· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·';
+  display: block;
+  text-align: center;
+  width: 100%;
+}
