--- a/docs/assets/styles/team-styles.css
+++ b/docs/assets/styles/team-styles.css
@@ -11,19 +11,6 @@
   text-align: center;
 }
 
-.divider {
-  position: relative;
-  text-align: center;
-  padding-top: 20px;
-}
-
-.divider::before {
-  content: '· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·';
-  display: block;
-  text-align: center;
-  width: 100%;
-}
-
 @media (max-width: 425px) {
   .columns {
     display: flex !important;
@@ -59,10 +46,22 @@
 }
 
 div.column {
-    display: inline-block;
-    overflow-x: initial;
-    vertical-align: middle;
-    width: 50%;
-    padding-bottom: 15px;
+    display: inline-block !important;
+    overflow-x: initial !important;
+    vertical-align: middle !important;
+    width: 50% !important;
+    padding-bottom: 15px !important;
 }
 
+.divider {
+  position: relative;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.divider::before {
+  content: '· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·';
+  display: block;
+  text-align: center;
+  width: 100%;
+}
